OPTION(ENABLE_KROSSFALCON "build Kross Falcon scripting library" OFF)

set(KROSSFALCON_ENABLED "no")
if(ENABLE_KROSSFALCON)
project(krossfalcon)
    set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/krossfalcon/cmake/modules )
    macro_optional_find_package(FALCON)
    macro_log_feature(FALCON_FOUND "FALCON" "Falcon language programming" "http://www.falconpl.org/index.ftd?page_id=official_download" FALSE "" "Required for Falcon kross.")
    if( FALCON_FOUND )
        add_subdirectory(krossfalcon)
        set(KROSSFALCON_ENABLED "yes")
    endif(FALCON_FOUND)
endif(ENABLE_KROSSFALCON)
message(STATUS "Build Kross Falcon... " ${KROSSFALCON_ENABLED})
